--- a/CCMM/style.css
+++ b/CCMM/style.css
@@ -522,7 +522,7 @@ button:active {
 		  left: calc(50% - 10rem);*/
 		  width: 20rem;
 		  height: 20rem;
-		  background: url("img/background.jpg") repeat fixed;
+		  background: url("img/Background.jpg") repeat fixed;
 		  border-radius: 50%;
 		}
 		header{
